# zegion

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
tests/: __init__.py  test_agents.py  test_config.py  test_tool.py
zegion/: __init__.py  agents.py  cli.py  config.py  tool.py
zegion/writer/: __init__.py  base.py  exception.py  notion.py
