[project]
name = "zegion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "deepmerge>=2.0",
    "ipython>=9.0.2",
    "loguru>=0.7.3",
    "notion-client>=2.3.0",
    "openai-agents>=0.0.4",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "setuptools>=77.0.1",
    "typer>=0.15.2",
]
[tool.setuptools]
packages = ["zegion", "zegion.writer"]

[project.scripts]
zegion = "zegion.cli:run"


[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]
